[tool.poetry]
name = "learn_poetry"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.2"
pandas = "^1.4.3"
requests = "^2.28.1"
numpy = "^1.23.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

packages = [
    {include = "helper_function"}
]